--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Howarts Students</h1>
 
-<%= @students.each do |student| %>
+<% @students.each do |student| %>
   <p>Name: <%= student.name %></p>
   <ul>
     <li>Age: <%= student.age %></li>
